# money-view

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  cargo.toml  docker-compose.yaml  justfile  start-flutter.sh  supervisord.conf
.github/workflows/: docker-build.yml
app/: .gitignore  compile-proto.sh  pubspec.yaml
app/android/app/src/main/: AndroidManifest.xml
app/ios/Runner/: Info.plist
app/lib/: application_state.dart  grpc_channel.dart  grpc_channel_web.dart  main.dart
app/lib/layout/: index_page.dart  money_view.dart
app/lib/ui/: balance_chart.dart  big_card.dart  home.dart  partner_balance.dart  tag_balance.dart  tag_manager.dart  transaction_list.dart  transaction_widget.dart
app/macos/Runner.xcodeproj/: project.pbxproj
app/test/: widget_test.dart
frontend/: Cargo.toml  build.rs  index.html
frontend/src/: main.rs
proto/: moneyview.proto
server/: Cargo.toml  build.rs
server/src/: api.rs  database.rs  main.rs  parser.rs
src/: api.rs  compile_protos.rs  database.rs  main.rs  parser.rs
