[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
sycamore = { version = "0.9.0-beta.2", features = ["suspense"] }
tonic-web-wasm-client = "0.6"
prost = "0.13"
tonic = { version = "0.12", default-features = false, features = [
    "prost",
    "codegen",
] }
wasm-bindgen = "0"

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = [
    "prost",
] }