[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.1"
tonic-web = "0.12.1"
tonic-reflection = "0.12.1"
tonic-types = "0.12.1"

[build-dependencies]
tonic-build = "0.12.1"