[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.2"
tonic-web = "0.12.2"
tonic-reflection = "0.12.2"
tonic-types = "0.12.2"
couch_rs = {version="0.10.1", features = ["derive"]}
dotenvy = "0.15"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


[build-dependencies]
tonic-build = "0.12.2"